Bug 1124952 - Set request status to Pending in the special DecodeFirstFrame calls too. r=cpearce, a=sledru